Bug 960382 - Accessible table rows should be of ATK_ROLE_TABLE_ROW, not ATK_ROLE_LIST_ITEM. r=tbsaunde